# seismicplanet

./: .gitignore  CLAUDE.md  README.md  california-earthquakes.html  pyproject.toml
.github/workflows/: build-image.yml  deploy.yml  terraform.yml
infra/: acm.tf  backend-dev.conf  backend-prod.conf  backend-staging.conf  backend.conf  cloudfront.tf  ecr.tf  eks.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  route53.tf  s3.tf  scheduler.tf  tf-seismicplanet-infra-policy.json  variables.tf  versions.tf  vpc.tf
infra/bootstrap/: backend.conf  main.tf  outputs.tf  variables.tf
k8s/: cronjob.yaml  namespace.yaml  serviceaccount.yaml
pipeline/: Dockerfile  api_handler.py  append.py  client.py  compact.py  download.py  entrypoint.sh  export.py  hazard.py  lambda_handler.py  query.py  schema.py  storage.py  sync.py  today.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: countries.json  hazard.json  states.json
web/src/: App.tsx  index.css  store.ts  types.ts
web/src/components/: Atmosphere.tsx  Borders.tsx  Coastlines.tsx  DepthLines.tsx  EarthquakePoints.tsx  Globe.tsx  HazardLayer.tsx  Scene.tsx
web/src/hooks/: useEarthquakeData.ts  useHazardData.ts
web/src/lib/: colors.ts  coordinates.ts
web/src/ui/: EventWindow.tsx  LeftPanel.tsx  RightPanel.tsx  Timeline.tsx
