[project]
name = "seismicplanet-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars[pyarrow]>=0.20",
    "httpx>=0.27",
    "click>=8.0",
    "duckdb>=0.10",
    "tqdm>=4.0",
]

[project.scripts]
sp-download = "pipeline.download:main"
sp-append   = "pipeline.append:main"
sp-compact  = "pipeline.compact:main"
sp-query    = "pipeline.query:main"
sp-today    = "pipeline.today:main"
sp-export   = "pipeline.export:main"
sp-sync     = "pipeline.sync:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
